tdf#120824 KDE5: fix visible/enabled state for menu

Change-Id: I003703f0bc2e1697124e068a68bfb2e24c33cd1a